# MoETTA

./: README.md  pyproject.toml
config/: __init__.py  config.py
config/subconfigs/: cifar10.py  cifar100.py  cifar10c.py
src/: pipeline.py
src/dataset/: dataset.py
