[project]
name = "moetta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "optuna>=4.6.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "ruff>=0.14.11",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "transformers>=5.0.0",
    "tyro>=1.0.5",
    "wandb>=0.24.0",
]


[tool.ruff]
exclude = [
    "wandb/",
    ".venv/",
    ".ruff_cache/",
    "__pycache__/"
]
